incrementando multiplicação no metodo de soma de valores

--- a/src/app/views/pages/caixa/nova-venda/nova-venda.component.html
+++ b/src/app/views/pages/caixa/nova-venda/nova-venda.component.html
@@ -234,16 +234,19 @@
                                                 style="width: 25%"
                                                 appearance="standart"
                                             >
-                                                <select
+                                                <mat-select
                                                     matNativeControl
                                                     required
+                                                    value={{task.qtdSelecionada}}
+                                                    (selectionChange)="somaValores($event.value, task)"
+
                                                 >
-                                                    <option value="1">1</option>
-                                                    <option value="2">2</option>
-                                                    <option value="3">3</option>
-                                                    <option value="4">4</option>
-                                                    <option value="5">5</option>
-                                                </select>
+                                                    <mat-option value="1">1</mat-option>
+                                                    <mat-option value="2">2</mat-option>
+                                                    <mat-option value="3">3</mat-option>
+                                                    <mat-option value="4">4</mat-option>
+                                                    <mat-option value="5">5</mat-option>
+                                                </mat-select>
                                             </mat-form-field>
                                         </div>
                                         <div
@@ -327,16 +330,18 @@
                                                 style="width: 25%"
                                                 appearance="standart"
                                             >
-                                                <select
+                                                <mat-select
                                                     matNativeControl
                                                     required
+                                                    value={{product.qtdSelecionada}}
+                                                    (selectionChange)="somaValores($event.value, product)"
                                                 >
-                                                    <option value="1">1</option>
-                                                    <option value="2">2</option>
-                                                    <option value="3">3</option>
-                                                    <option value="4">4</option>
-                                                    <option value="5">5</option>
-                                                </select>
+                                                    <mat-option value="1">1</mat-option>
+                                                    <mat-option value="2">2</mat-option>
+                                                    <mat-option value="3">3</mat-option>
+                                                    <mat-option value="4">4</mat-option>
+                                                    <mat-option value="5">5</mat-option>
+                                                </mat-select>
                                             </mat-form-field>
                                         </div>
                                         <div
