--- a/src/app/views/pages/caixa/nova-venda/nova-venda.component.html
+++ b/src/app/views/pages/caixa/nova-venda/nova-venda.component.html
@@ -22,7 +22,7 @@
       </div>
       <div class="radio">
         <mat-radio-group class="example-radio-group" [(ngModel)]="selectedmenu">
-          <mat-radio-button style="margin-right: 25px" color="primary" *ngFor="let option of menus" [value]="option">
+          <mat-radio-button style="margin-right: 25px" color="primary" *ngFor="let option of menus" [value]="option" (change)="listarItens()">
             {{ option }}
           </mat-radio-button>
         </mat-radio-group>
