--- a/src/app/core/lib/components/modais/agendamentos/cadastrar-editar/cadastrar-editar.component.html
+++ b/src/app/core/lib/components/modais/agendamentos/cadastrar-editar/cadastrar-editar.component.html
@@ -6,13 +6,13 @@
 
     <!-- modal -->
     <mat-dialog-content>
-        <div [formGroup]="form" class="example-form">
+        <div (ngSubmit)="cadastrarAgendamento()" [formGroup]="form" #formDir="ngForm" class="example-form">
             <!-- cliente -->
             <div class="cliente">
                 <mat-form-field class="example-full-width" id="inpN" appearance="standard">
                     <mat-label class="cliente">Cliente</mat-label>
                     <input formControlName="nomeCliente" matInput required />
-                    <mat-error *ngIf="form.get('nomeCliente').hasError('required')">
+                    <mat-error *ngIf="form.get('nomeCliente').hasError('required') && formDir.submitted">
                         Preencha este campo!
                     </mat-error>
                 </mat-form-field>
@@ -22,7 +22,7 @@
                 <mat-form-field class="example-full-width" id="inpN" appearance="standard">
                     <mat-label class="servico">Serviço</mat-label>
                     <input formControlName="nomeServico" matInput required />
-                    <mat-error *ngIf="form.get('nomeServico').hasError('required')">
+                    <mat-error *ngIf="form.get('nomeServico').hasError('required') && formDir.submitted">
                         Preencha este campo!
                     </mat-error>
                 </mat-form-field>
@@ -35,8 +35,9 @@
                     <input formControlName="tempoEstimado" type="text" matInput placeholder="Digite o Tempo"
                         maxlength="3" required />
                     <span matTextPrefix class="minutos">Minutos&nbsp;</span>
-                    <mat-error *ngIf="form.get('tempoEstimado').hasError('required')">
+                    <mat-error *ngIf="form.get('tempoEstimado').hasError('required') && formDir.submitted">
                         Preencha este campo!
+                        <P *ngIf="form.get('tempoEstimado').hasError('pattern')">Preencha apenas com números </P>
                     </mat-error>
                 </mat-form-field>
 
@@ -44,8 +45,9 @@
                 <mat-form-field id="categoria" appearance="standard">
                     <mat-label>Valor do Serviço</mat-label>
                     <input matInput formControlName="valor" required placeholder="Ex. R$ 50,66" />
-                    <mat-error *ngIf="form.get('valor').hasError('required')">
+                    <mat-error *ngIf="form.get('valor').hasError('required') && formDir.submitted">
                         Selecione uma opção!
+                        <P *ngIf="form.get('valor').hasError('pattern')">Preencha apenas com números </P>
                     </mat-error>
                 </mat-form-field>
             </div>
@@ -57,7 +59,7 @@
                     <input matInput [matDatepicker]="picker" formControlName="dtAtendimento" />
                     <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                     <mat-datepicker #picker></mat-datepicker>
-                    <mat-error *ngIf="form.get('dtAtendimento').hasError('required')">
+                    <mat-error *ngIf="form.get('dtAtendimento').hasError('required') && formDir.submitted">
                         Preencha a data corretamente!
                     </mat-error>
                 </mat-form-field>
@@ -65,7 +67,7 @@
                 <mat-form-field id="categoria" appearance="standard">
                     <mat-label>Hora</mat-label>
                     <input matInput formControlName="hrAtendimento" placeholder="Ex. 12:30" />
-                    <mat-error *ngIf="form.get('hrAtendimento').hasError('required')">
+                    <mat-error *ngIf="form.get('hrAtendimento').hasError('required') && formDir.submitted">
                         Preencha o horário corretamente!
                     </mat-error>
                 </mat-form-field>
@@ -84,7 +86,7 @@
                         <mat-option *ngFor="let status of opcoesStatus" value="{{ status.valor }}">{{ status.nome }}</mat-option>
 
                     </mat-select>
-                    <mat-error *ngIf="form.get('status').hasError('required')">
+                    <mat-error *ngIf="form.get('status').hasError('required') && formDir.submitted">
                         Selecione uma opção!
                     </mat-error>
                 </mat-form-field>
@@ -94,7 +96,7 @@
     <!-- botoes adicionar e cancelar -->
     <mat-dialog-actions align="end">
         <button mat-button mat-dialog-close>Cancelar</button>
-        <button mat-button mat-raised-button color="primary" (click)="cadastrarEditarAgendamento()">
+        <button mat-button mat-raised-button color="primary" (click)="cadastrarAgendamento()">
             Adicionar
         </button>
     </mat-dialog-actions>
