--- a/src/app/core/lib/components/modais/servico/cadastrar-editar-servico/cadastrar-editar-servico.component.html
+++ b/src/app/core/lib/components/modais/servico/cadastrar-editar-servico/cadastrar-editar-servico.component.html
@@ -5,9 +5,9 @@
   </div>
 
   <!-- modal -->
+  <form (ngSubmit)="cadastrarEditarServico()" [formGroup]="form" #formDir="ngForm" class="example-form">
   <mat-dialog-content>
     <!-- formulario -->
-    <div [formGroup]="form" class="example-form">
       <div class="formulario">
         <div id="formul">
 
@@ -39,7 +39,7 @@
               <mat-form-field class="example-full-width" id="inpN" appearance="standard">
                 <mat-label class="nome">Nome do serviço</mat-label>
                 <input formControlName="nome" matInput required />
-                <mat-error *ngIf="form.get('nome').hasError('required')">
+                <mat-error *ngIf="form.get('nome').hasError('required') && formDir.submitted">
                   Preencha este campo!
                 </mat-error>
               </mat-form-field>
@@ -52,7 +52,7 @@
                 <input matInput formControlName="tempoEstimado" type="number" placeholder="Digite o Tempo" maxlength="3"
                   required />
                 <span matTextPrefix class="minutos">Minutos&nbsp;</span>
-                <mat-error *ngIf="form.get('tempoEstimado').hasError('required')">
+                <mat-error *ngIf="form.get('tempoEstimado').hasError('required') && formDir.submitted">
                   Preencha este campo!
                 </mat-error>
               </mat-form-field>
@@ -64,7 +64,7 @@
                   <mat-option value="cabelo">Cabelo</mat-option>
                   <mat-option value="barba">Barba</mat-option>
                 </mat-select>
-                <mat-error *ngIf="form.get('categoria').hasError('required')">
+                <mat-error *ngIf="form.get('categoria').hasError('required') && formDir.submitted">
                   Selecione uma opção!
                 </mat-error>
               </mat-form-field>
@@ -94,7 +94,7 @@
               <span matTextPrefix>R$&nbsp;</span>
               <input formControlName="valor" id="valor" matInput type="number" class="example-right-align"
                 placeholder="0" fxFlex="grow" />
-              <mat-error *ngIf="form.get('valor').hasError('required')">
+              <mat-error *ngIf="form.get('valor').hasError('required') && formDir.submitted">
                 Preencha este campo!
               </mat-error>
             </mat-form-field>
@@ -105,23 +105,23 @@
               <span matTextPrefix>R$&nbsp;</span>
               <input formControlName="valorPromocional" id="valorPromocional" matInput type="number"
                 class="example-right-align" placeholder="0" fxFlex="grow" />
-              <mat-error *ngIf="form.get('valorPromocional').hasError('required')">
+              <mat-error *ngIf="form.get('valorPromocional').hasError('required') && formDir.submitted">
                 Preencha este campo!
               </mat-error>
             </mat-form-field>
           </div>
         </div>
       </div>
-    </div>
-  </mat-dialog-content>
+    </mat-dialog-content>
 
-  <!-- botoes adicionar e cancelar -->
-  <mat-dialog-actions align="end">
-    <button mat-button mat-dialog-close>Cancelar</button>
-    <button mat-button mat-raised-button color="primary" (click)="cadastrarEditarServico()">
-      {{ legendaBotao }}
-    </button>
-  </mat-dialog-actions>
+    <!-- botoes adicionar e cancelar -->
+    <mat-dialog-actions align="end">
+      <button mat-button mat-dialog-close>Cancelar</button>
+      <button mat-button mat-raised-button color="primary" (click)="cadastrarEditarServico()">
+        {{ legendaBotao }}
+      </button>
+    </mat-dialog-actions>
+  </form>
 </div>
 
 <!-- LOADING -->
