validação concluida no modal de serviços
inclui algumas modificações e concertos no modal de agendamento

--- a/src/app/core/lib/components/modais/agendamentos/cadastrar-editar/cadastrar-editar.component.html
+++ b/src/app/core/lib/components/modais/agendamentos/cadastrar-editar/cadastrar-editar.component.html
@@ -104,8 +104,8 @@
     <!-- botoes adicionar e cancelar -->
     <mat-dialog-actions align="end">
       <button mat-button mat-dialog-close>Cancelar</button>
-      <button mat-button mat-raised-button color="primary" (click)="cadastrarEditarAgendamento()">
-        Adicionar
+      <button mat-button mat-raised-button color="primary">
+        {{ legendaBotao }}
       </button>
     </mat-dialog-actions>
   </form>
